exageostat_parsec/hicma/chameleon/control/morse_zf90.F90


      interface
         function MORSE_zlauum_Tile_c(uplo,A) &
          & bind(c, name='MORSE_zlauum_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlauum_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function MORSE_zlauum_Tile_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function MORSE_zplghe_Tile_c(bump,uplo,A,seed) &
          & bind(c, name='MORSE_zplghe_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zplghe_Tile_c
            real(kind=c_double), value :: bump
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function MORSE_zplghe_Tile_c
      end interface
#endif

      interface
         function MORSE_zplgsy_Tile_c(bump,uplo,A,seed) &
          & bind(c, name='MORSE_zplgsy_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zplgsy_Tile_c
            complex(kind=c_double_complex), value :: bump
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function MORSE_zplgsy_Tile_c
      end interface

      interface
         function MORSE_zplrnt_Tile_c(A,seed) &
          & bind(c, name='MORSE_zplrnt_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zplrnt_Tile_c
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function MORSE_zplrnt_Tile_c
      end interface

      interface
         function MORSE_zposv_Tile_c(uplo,A,B) &
          & bind(c, name='MORSE_zposv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zposv_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function MORSE_zposv_Tile_c
      end interface

      interface
         function MORSE_zsysv_Tile_c(uplo,A,B) &
          & bind(c, name='MORSE_zsysv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsysv_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function MORSE_zsysv_Tile_c
      end interface

      interface
         function MORSE_zpotrf_Tile_c(uplo,A) &
          & bind(c, name='MORSE_zpotrf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zpotrf_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function MORSE_zpotrf_Tile_c
      end interface

      interface
         function MORSE_zsytrf_Tile_c(uplo,A) &
          & bind(c, name='MORSE_zsytrf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsytrf_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function MORSE_zsytrf_Tile_c
      end interface

      interface
         function MORSE_zpotri_Tile_c(uplo,A) &
          & bind(c, name='MORSE_zpotri_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zpotri_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function MORSE_zpotri_Tile_c
      end interface

      interface
         function MORSE_zpotrs_Tile_c(uplo,A,B) &
          & bind(c, name='MORSE_zpotrs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zpotrs_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function MORSE_zpotrs_Tile_c
      end interface

      interface
         function MORSE_zsytrs_Tile_c(uplo,A,B) &
          & bind(c, name='MORSE_zsytrs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsytrs_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function MORSE_zsytrs_Tile_c
      end interface

      interface
         function MORSE_zsymm_Tile_c(side,uplo,alpha,A,B,beta,C) &
          & bind(c, name='MORSE_zsymm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsymm_Tile_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            complex(kind=c_double_complex), value :: beta
            type(c_ptr), value :: C
          end function MORSE_zsymm_Tile_c
      end interface

      interface
         function MORSE_zsyr2k_Tile_c(uplo,trans,alpha,A,B,beta,C) &
          & bind(c, name='MORSE_zsyr2k_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsyr2k_Tile_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            complex(kind=c_double_complex), value :: beta
            type(c_ptr), value :: C
          end function MORSE_zsyr2k_Tile_c
      end interface

      interface
         function MORSE_zsyrk_Tile_c(uplo,trans,alpha,A,beta,C) &
          & bind(c, name='MORSE_zsyrk_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsyrk_Tile_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            complex(kind=c_double_complex), value :: beta
            type(c_ptr), value :: C
          end function MORSE_zsyrk_Tile_c
      end interface

      interface
         function MORSE_ztrmm_Tile_c(side,uplo,transA,diag,alpha,A,B) &
          & bind(c, name='MORSE_ztrmm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_ztrmm_Tile_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: transA
            integer(kind=c_int), value :: diag
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function MORSE_ztrmm_Tile_c
      end interface

      interface
         function MORSE_ztrsm_Tile_c(side,uplo,transA,diag,alpha,A,B) &
          & bind(c, name='MORSE_ztrsm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_ztrsm_Tile_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: transA
            integer(kind=c_int), value :: diag
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function MORSE_ztrsm_Tile_c
      end interface

      interface
         function MORSE_ztrsmpl_Tile_c(A,L,IPIV,B) &
          & bind(c, name='MORSE_ztrsmpl_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_ztrsmpl_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function MORSE_ztrsmpl_Tile_c
      end interface

      interface
         function MORSE_ztrsmrv_Tile_c(side,uplo,transA,diag,alpha,A,B) &
          & bind(c, name='MORSE_ztrsmrv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_ztrsmrv_Tile_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: transA
            integer(kind=c_int), value :: diag
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function MORSE_ztrsmrv_Tile_c
      end interface

      interface
         function MORSE_ztrtri_Tile_c(uplo,diag,A) &
          & bind(c, name='MORSE_ztrtri_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_ztrtri_Tile_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: diag
            type(c_ptr), value :: A
          end function MORSE_ztrtri_Tile_c
      end interface

      interface
         function MORSE_zunglq_Tile_c(A,T,B) &
          & bind(c, name='MORSE_zunglq_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zunglq_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function MORSE_zunglq_Tile_c
      end interface

      interface
         function MORSE_zungqr_Tile_c(A,T,B) &
          & bind(c, name='MORSE_zungqr_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zungqr_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function MORSE_zungqr_Tile_c
      end interface

      interface
         function MORSE_zunmlq_Tile_c(side,trans,A,T,B) &
          & bind(c, name='MORSE_zunmlq_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zunmlq_Tile_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: trans
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function MORSE_zunmlq_Tile_c
      end interface

      interface
         function MORSE_zunmqr_Tile_c(side,trans,A,T,B) &
          & bind(c, name='MORSE_zunmqr_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zunmqr_Tile_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: trans
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function MORSE_zunmqr_Tile_c
      end interface

    !+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
    !  FORTRAN API - math functions (asynchronous interface)
    !
      interface
         function MORSE_zgebrd_Tile_Async_c(A,D,E,T,sequence,request) &
          & bind(c, name='MORSE_zgebrd_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgebrd_Tile_Async_c
            type(c_ptr), value :: A
            type(c_ptr), value :: D
            type(c_ptr), value :: E
            type(c_ptr), value :: T
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgebrd_Tile_Async_c
      end interface
